...
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Poet Assistant</string>

    <string name="tab_pattern">Pattern</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_wotd">Words of the day</string>
    <string name="tab_rhymer">Rhymer</string>
    <string name="tab_thesaurus">Thesaurus</string>
    <string name="tab_dictionary">Dictionary</string>
    <string name="tab_reader">Composer</string>

    <string name="action_cancel">Cancel</string>
    <string name="action_clear">Clear</string>
    <string name="action_search">Search</string>
    <string name="action_random_word">Random word</string>
    <string name="action_clear_search_history">Clear search history</string>
...
    <string name="action_import_favorites">Import favorites</string>
    <string name="import_favorites_success">Favorites imported from %s</string>
    <string name="import_favorites_error">Could not import favorites file from %s</string>
    <string name="export_favorites_success">Favorites exported to %s</string>
    <string name="export_favorites_error">Could not export favorites file to %s</string>
    <string name="export_favorites_default_filename">poet-assistant-favorites.txt</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="search_hint">Lookup a word</string>
    <string name="favorites_list_header">Favorites</string>
    <string name="wotd_list_header">Words of the day</string>
    <string name="rhyme_section_stress_syllables">Strict rhyme matches:</string>
    <string name="rhyme_section_favorites">Favorites:</string>
...
    <string name="filter_thesaurus_message">Only show words which rhyme with this word:</string>
    <string name="filter_thesaurus_label">"Rhymes of: "</string>
    <string name="filter_clear">Clear filter</string>
    <string name="menu_lookup_rhymer">Rhymer</string>
    <string name="menu_lookup_thesaurus">Thesaurus</string>
    <string name="menu_lookup_dictionary">Dictionary</string>
    <string name="menu_copy">Copy</string>
    <string name="menu_more">More</string>
    <string name="snackbar_copied_text">Copied text to clipboard</string>
    <string name="title_activity_settings">Settings</string>
    <string name="wotd_setting_title">Word of the day</string>
    <string name="wotd_setting_description">Display a notification once a day with a random word.</string>
    <string name="wotd_notification_title">Word of the day: %s</string>
    <string name="wotd_notification_definition"><![CDATA[<br>\n<b>%1$s.</b> %2$s]]></string>
...
    <string name="match_aor_ao_setting_title">AOR /ɔr/ matches AO /ɔ/</string>
    <string name="match_aor_ao_setting_description">AOR /ɔr/: "more".\nAO /ɔ/: "thaw".</string>
    <string name="thesaurus_reverse_lookup_setting_title">Include reverse lookup</string>
    <string name="thesaurus_reverse_lookup_setting_description">May be slower and include less relevant results.</string>
    <string name="share">Share</string>
    <string name="share_poem_text">Share poem text</string>
    <string name="share_poem_audio">Share poem audio</string>
    <string name="share_poem_audio_snackbar">Saving poem to audio file</string>
    <string name="share_poem_audio_progress_notification_title">Saving poem</string>
    <string name="share_poem_audio_progress_notification_message">Saving poem to audio file…</string>
    <string name="share_poem_audio_ready_notification_title">Poem audio ready</string>
    <string name="share_poem_audio_ready_notification_message">Tap to share the poem audio</string>
    <string name="share_poem_audio_error_notification_title">Error saving poem audio</string>
...
    <string name="pref_category_ui">Interface</string>
    <string name="pref_voice_default">System voice</string>
    <string name="pref_voice_title">Voice</string>
    <string name="pref_voice_summary">%s</string>
    <string name="pref_voice_speed_title">Voice speed (%)</string>
    <string name="pref_voice_pitch_title">Voice pitch (%)</string>
    <string name="pref_theme_title">Theme</string>
    <string name="pref_theme_summary">%s</string>
    <string name="pref_theme_value_light">Light</string>
    <string name="pref_theme_value_dark">Dark</string>
    <string name="pref_theme_value_auto">Auto</string>
    <string-array name="pref_theme_titles">
        <item>@string/pref_theme_value_light</item>
        <item>@string/pref_theme_value_dark</item>
        <item>@string/pref_theme_value_auto</item>
    </string-array>
    <string-array name="pref_theme_values">
        <item>Light</item>
        <item>Dark</item>
        <item>Auto</item>
    </string-array>
    <string name="pref_layout_title">Layout</string>
    <string name="pref_layout_summary">%s</string>
    <string name="pref_layout_value_clean">Clean</string>
    <string name="pref_layout_value_efficient">Efficient</string>
    <string-array name="pref_layout_titles">
        <item>@string/pref_layout_value_clean</item>
        <item>@string/pref_layout_value_efficient</item>
    </string-array>
    <string-array name="pref_layout_values">
        <item>Clean</item>
        <item>Efficient</item>
    </string-array>
    <string name="pref_selection_lookup_title">Selection lookup</string>
    <string name="pref_selection_lookup_summary">Enable lookup in the rhymer, thesaurus, and dictionary, when a word is selected (including from other apps).</string>
    <string name="pref_voice_preview_title">Preview</string>
    <string name="pref_voice_preview_summary">Listen to a voice sample</string>
    <string name="pref_voice_preview_text">To be, or not to be, that is the question.</string>
    <string name="pref_system_tts_settings_title">System voice settings</string>
    <string name="pref_system_tts_settings_description">This will leave Poet Assistant and open the system text-to-speech settings on your device.</string>
    <string name="tts_error"><![CDATA[No voices found! &#128552;]]></string>
    <string name="tts_error_open_system_settings">Voice settings</string>
    <string name="tts_error_open_app_settings">Settings</string>
    <string name="reader_word_char_count">%1$s, %2$s</string>

    <plurals name="reader_word_count">
        <item quantity="one">%s word</item>
        <item quantity="other">%s words</item>
    </plurals>
    <plurals name="reader_char_count">
        <item quantity="one">%s characters</item>
        <item quantity="other">%s characters</item>
    </plurals>
    <string name="word_count_help_title">Word count</string>
    <string name="word_count_help_message"><![CDATA[The following characters do not break up words for the word count:<br/>
<br/>
<b>- \' ’ _</b><br/>
All other punctuation characters break words.<br/><br/>
Each newline is counted as a single character for the character count.]]></string>

...
