...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:iconSize="48dp" />


            <ca.rmen.android.poetassistant.widget.CABEditText
                android:id="@+id/tv_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/tts_hint"
                app:layout_constraintBottom_toTopOf="@+id/reader_word_count"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
